# sankan-ou

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  deploy.ps1  deploy.sh  docker-compose.yml  grc-triple-crown-spec.jsx
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: a1b2c3d4e5f6_add_is_default_to_courses.py  e34760f79b4b_initial_schema_with_19_models.py
apps/api/seed/: seed_db.py
apps/api/seed/syllabus/: boki1.json  cfe.json  cia.json  cisa.json  fp.json  riss.json  uscpa.json
apps/api/src/: config.py  database.py  deps.py  main.py
apps/api/src/api/v1/: admin.py  auth.py  cards.py  courses.py  dashboard.py  enrollments.py  gamification.py  health.py  media.py  mock_exam.py  predictions.py  questions.py  router.py  sessions.py  synergy.py  tutor.py
apps/api/src/llm/: __init__.py  client.py  gemini_client.py
apps/api/src/llm/prompts/: question_gen.py  tutor.py
apps/api/src/models/: __init__.py  base.py  card.py  course.py  enrollment.py  gamification.py  mastery.py  mock_exam.py  question.py  synergy.py  user.py
apps/api/src/plugins/: __init__.py  base.py  boki1.py  cfe.py  cia.py  cisa.py  fp.py  registry.py  riss.py  uscpa.py
apps/api/src/schemas/: auth.py  card.py  course.py  dashboard.py  mock_exam.py  prediction.py  question.py  tutor.py
apps/api/src/services/: auth_service.py  fsrs_service.py  gamification_service.py  session_service.py
apps/api/tests/: conftest.py  setup_db.py  test_admin.py  test_auth.py  test_cards.py  test_courses.py  test_dashboard.py  test_enrollments.py  test_gamification.py  test_health.py  test_media.py  test_mock_exam.py  test_plugins.py  test_questions.py  test_sessions.py  test_synergy.py  test_tutor.py
docs/: api.md  architecture.md  deployment.md  setup-guide.md  specification.md  (+1 more)
(+47 files in other folders)
