[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[project]
name = "sankan-ou-api"
version = "0.1.0"
description = "GRC Triple Crown - AI駆動型CIA/CISA/CFE学習プラットフォーム API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "GEJFY" }]
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
    # SRS
    "fsrs>=6.0",
    # LLM (Azure AI Foundry - OpenAI + Anthropic)
    "openai>=1.50",
    "anthropic>=0.40",
    # Validation / Config
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "email-validator>=2.1",
    # Utilities
    "loguru>=0.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: 単体テスト",
    "integration: 結合テスト",
    "e2e: E2Eテスト",
]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "seed/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
